fix: update scrollbar

--- a/documentation/documentation.css
+++ b/documentation/documentation.css
@@ -5,7 +5,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 25rem 1fr;
-  grid-template-rows: 10rem 1fr;
+  grid-template-rows: 7rem 1fr;
   grid-template-areas:
     "nav nav"
     "aside main";
@@ -21,6 +21,9 @@
   font-size: 2rem;
   padding: 1.6rem;
   width: 100%;
+  position: fixed;
+  height: 7rem;
+  z-index: 10;
 }
 
 .navbar-logo {
@@ -28,7 +31,7 @@
 }
 
 .navbar-logo img {
-  height: 10rem;
+  height: 6rem;
   margin-right: 1rem;
 }
 
@@ -73,15 +76,18 @@ a.navbar-links-active {
   background-color: var(--color-navbar);
   font-size: 2rem;
   grid-area: aside;
-  overflow-y: scroll;
-  height: 100vh;
-  position: sticky;
+  overflow-y: auto;
+  height: 95vh;
+  position: fixed;
+  top: 7rem;
 }
 
 .menu-list {
   list-style: none;
   width: 100%;
   padding: 0rem 2.4rem;
+  /* margin-bottom: 3rem; */
+  padding-bottom: 3.5rem;
 }
 
 .menu-list li {
@@ -134,7 +140,7 @@ aside::-webkit-scrollbar-thumb {
   font-size: 1.6rem;
   grid-area: main;
   color: var(--color-text);
-  padding: 2.4rem;
+  padding: 1.2rem 2.4rem;
   padding-right: 10rem;
 }
 
